<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginReplesh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash4"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/ligin_text"
                android:textColor="@color/colorblack"
                android:textSize="20sp"
                android:textStyle="italic" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edittext_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#7efaf2f2"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="10dp"
                    android:hint="example@yourmail.com"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorblack"
                    android:textColorHint="@color/colorblack" />

                <EditText
                    android:id="@+id/edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#7efaf2f2"
                    android:drawableLeft="@drawable/pass1"
                    android:drawablePadding="10dp"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorblack"
                    android:textColorHint="@color/colorblack" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/checkbox_rember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorblack"
                        android:text="@string/check_text"
                        android:textColor="@color/colorblack" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/pass_forgot"
                        android:textColor="@color/colorblack"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnSing_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#7efaf2f2"
                android:text="@string/btn_sign"
                android:textColor="@color/colorblack"
                android:textSize="20sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Don't have account ?"
                    android:textColor="@color/colorblack"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textview_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/sing_up"
                    android:textColor="@color/colorblack"
                    android:textSize="20sp"
                    android:textStyle="italic" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
